--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -31,7 +31,8 @@
 
     <div class="col-lg-3 col-md-6 col-12 my-2">
       <div class="mx-5 bg-white serviceItem pt-3">
-        <img style="height: 180px;" src="https://images.vexels.com/media/users/3/236440/isolated/preview/5cff4483ed2d0027d2512e2b29c227c3-girl-in-long-dress-silhouette.png">
+        <img style="height: 180px;"
+          src="https://images.vexels.com/media/users/3/236440/isolated/preview/5cff4483ed2d0027d2512e2b29c227c3-girl-in-long-dress-silhouette.png">
         <span class="my-2">Ladies Sangeet </span>
       </div>
     </div>
@@ -49,16 +50,90 @@
   <!-- About Us -->
 
 
-  <div class="row aboutUs my-5 bg-dark py-5">
+  <div class="row aboutUs mt-5 bg-dark py-5" style="box-shadow: 3px 3px 7px 7px black;">
     <div class="col-lg-6 col-md-6 col-12 aboutUsImg">
       <img src="/aboutus.JPG">
     </div>
 
     <div class="col-lg-6 col-md-6 col-11 aboutUsText px-3 py-3 my-auto">
       <h2>About Us!</h2>
-      <span class="text-center" style="text-align: justify; font-weight: 500;">A premier wedding choreography company renowned for transforming ordinary celebrations into extraordinary experiences. With a passion for dance and a knack for creating memorable moments, Raj has brought joy to countless couples and their families through expertly crafted choreography that reflects their unique love stories. His innovative approach combines traditional and contemporary styles, ensuring that every performance is not only stunning but also deeply personal.</span>
+      <span class="text-center" style="text-align: justify; font-weight: 500;">A premier wedding choreography company
+        renowned for transforming ordinary celebrations into extraordinary experiences. With a passion for dance and a
+        knack for creating memorable moments, Raj has brought joy to countless couples and their families through
+        expertly crafted choreography that reflects their unique love stories. His innovative approach combines
+        traditional and contemporary styles, ensuring that every performance is not only stunning but also deeply
+        personal.</span>
     </div>
   </div>
+
+
+
+  <!-- OUR GALLERY -->
+
+  <div class="row py-4" style="background-color: rgba(0, 0, 0, 0.692);">
+    <h1 class="text-center text-white">Our Gallery</h1>
+    <div class="galleryMain" style="overflow-x: scroll;">
+      <div class="col-12 gallery my-0 py-5 d-flex">
+
+
+        <img src="/gallery/1.JPG" class="img-fluid mx-3">
+
+        <img src="/gallery/2.JPG" class="img-fluid mx-3">
+
+        <img src="/gallery/3.JPG" class="img-fluid mx-3">
+
+
+        <img src="/gallery/4.JPG" class="img-fluid mx-3">
+
+        <img src="/gallery/5.JPG" class="img-fluid mx-3">
+
+        <img src="/gallery/6.PNG" class="img-fluid mx-3">
+
+
+
+        <img src="/gallery/7.PNG" class="img-fluid mx-3">
+
+        <img src="/gallery/8.PNG" class="img-fluid mx-3">
+
+        <img src="/gallery/9.PNG" class="img-fluid mx-3">
+
+
+
+
+        <img src="/gallery/10.JPG" class="img-fluid mx-3">
+
+        <img src="/gallery/11.JPG" class="img-fluid mx-3">
+
+        <img src="/gallery/12.JPG" class="img-fluid mx-3">
+        <img src="/gallery/13.JPG" class="img-fluid mx-3">
+
+        <img src="/gallery/14.AVIF" class="img-fluid mx-3">
+
+        <img src="/gallery/15.JPG" class="img-fluid mx-3">
+        <img src="/gallery/16.JPG" class="img-fluid mx-3">
+
+        <img src="/gallery/17.JPG" class="img-fluid mx-3">
+
+        <img src="/gallery/18.JPG" class="img-fluid mx-3">
+        <img src="/gallery/19.JPG" class="img-fluid mx-3">
+      </div>
+    </div>
+  </div>
+
+
+
+  <!-- BIOGRAHY -->
+   <div class="row biography bg-dark py-3" style="box-shadow: 3px 3px 7px 7px black;">
+    <h1 class="text-center text-white">Biography</h1>
+    <div class="col-lg-6 col-md-6 col-12 aboutUsImg my-4">
+      <img class="mx-auto" src="/logo.png">
+    </div>
+    <div class="col-lg-6 col-md-6 col-12 my-4">
+      <div class="text-white mx-auto" style="text-align: justify;">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates est modi consequuntur, nemo, nihil asperiores quas officiis labore atque corrupti voluptatem cumque iure dolorum maxime? Eaque, aspernatur provident cumque sequi quasi, dolorem vel molestias distinctio assumenda sunt, fuga repellendus laborum inventore neque. Ullam cum quaerat distinctio aspernatur eaque id cupiditate ex necessitatibus possimus nemo, aliquid explicabo incidunt iusto nisi est blanditiis delectus error temporibus odit facere itaque sequi voluptatem quis a. Deleniti expedita repudiandae architecto! Tempore minus recusandae nemo unde sapiente nam nulla omnis, quisquam non voluptas quasi officiis ab culpa autem velit delectus fuga architecto nesciunt ipsa vitae necessitatibus quo pariatur assumenda. Repellat consectetur voluptatum adipisci optio in. Omnis quis quia tenetur saepe vitae. Mollitia fugit, maxime vitae cum nihil.
+      </div>
+    </div>
+   </div>
 
 
 
