--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
 <app-header></app-header>
-<app-home></app-home>
+
+<router-outlet></router-outlet>
+
+<app-footer></app-footer>
+
+
+<!-- <div class="d-flex bg-dark"
+    style="display: flex; height: 100vh; justify-content: center; align-items: center; flex-direction: column;">
+    <img src="/logo.png" style="height: 200px;">
+    <h1 class="text-white my-5">Coming Soon........</h1>
+</div> -->
