--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,21 +1,3 @@
-<!-- <div class="container-fluid header">
-    <div class="row">
-        <div class="col-12 menu">
-            <div>
-                <img class="logo" src="/logo.png">
-            </div>
-
-            <div class=" my-auto">
-                <span class="menu-item mx-1 my-auto">Home</span>
-                <span class="menu-item mx-1 my-auto">About Us</span>
-                <span class="menu-item mx-1 my-auto">Services</span>
-                <span class="menu-item mx-1 my-auto">Contact</span>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-
 <nav class="navbar navbar-expand-lg w-100">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"><img class="logo" src="/logo.png"></a>
@@ -31,27 +13,30 @@
             <form class="d-flex" role="search">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item mx-4">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                        <a [ngClass]="{'border-top border-bottom': home, '': !home}" class="nav-link" aria-current="page" style="cursor: pointer;" (click)="routee('/')">Home</a>
                     </li>
                     <li class="nav-item mx-4">
-                        <a class="nav-link" href="#">About</a>
+                        <a [ngClass]="{'border-top border-bottom': packages, '': !packages}"  class="nav-link" style="cursor: pointer;" (click)="routee('/packages')">Packages</a>
+                    </li>
+                    <li class="nav-item mx-4">
+                        <a [ngClass]="{'border-top border-bottom': gallery, '': !gallery}" class="nav-link" style="cursor: pointer;" (click)="routee('/gallery')">Gallery</a>
                     </li>
                     <li class="nav-item mx-4 dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a [ngClass]="{'border-top border-bottom': services, '': !services}" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Services
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">⁠Group Dance</a></li>
+                            <li><a class="dropdown-item" href="#">⁠Friends Dance</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" style="cursor: pointer;" (click)="routee('/services')">See All</a></li>
                         </ul>
                     </li>
                     <li class="nav-item mx-4">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        <a [ngClass]="{'border-top border-bottom': contact, '': !contact}" class="nav-link" style="cursor: pointer;" (click)="routee('/contact')">Contact Us</a>
                     </li>
                 </ul>
             </form>
