--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,3 +1,4 @@
+
 @if(image){
 <div class="container-fluid bg-black mt-0 py-3">
 
@@ -16,44 +17,44 @@
 
         <div class="col-4 mx-0 px-2">
 
-            <img class="my-2 galleryItem" src="/gallery/1.JPG">
+            <img class="my-2 galleryItem" src="/1.JPG">
 
-            <img class="my-2 galleryItem" src="/gallery/2.JPG">
+            <img class="my-2 galleryItem" src="/2.JPG">
 
-            <img class="my-2 galleryItem" src="/gallery/3.JPG">
+            <img class="my-2 galleryItem" src="/3.JPG">
 
-            <img class="my-2 galleryItem" src="/gallery/9.PNG">
-            <img class="my-2 galleryItem" src="/gallery/10.JPG">
-            <img class="my-2 galleryItem" src="/gallery/11.JPG">
+            <img class="my-2 galleryItem" src="/9.PNG">
+            <img class="my-2 galleryItem" src="/10.JPG">
+            <img class="my-2 galleryItem" src="/11.JPG">
         </div>
 
         <div class="col-4 mx-0 px-2">
-            <img class="my-2 galleryItem" src="/gallery/12.JPG">
+            <img class="my-2 galleryItem" src="/12.JPG">
 
-            <img class="my-2 galleryItem" src="/gallery/4.JPG">
-
-
-            <img class="my-2 galleryItem" src="/gallery/5.JPG">
-
-            <img class="my-2 galleryItem" src="/gallery/6.PNG">
+            <img class="my-2 galleryItem" src="/4.JPG">
 
 
-            <img class="my-2 galleryItem" src="/gallery/13.JPG">
-            <img class="my-2 galleryItem" src="/gallery/14.AVIF">
+            <img class="my-2 galleryItem" src="/5.JPG">
+
+            <img class="my-2 galleryItem" src="/6.PNG">
+
+
+            <img class="my-2 galleryItem" src="/13.JPG">
+            <img class="my-2 galleryItem" src="/14.AVIF">
 
         </div>
 
 
         <div class="col-4 mx-0 px-2">
-            <img class="my-2 galleryItem" src="/gallery/15.JPG">
-            <img class="my-2 galleryItem" src="/gallery/7.PNG">
+            <img class="my-2 galleryItem" src="/15.JPG">
+            <img class="my-2 galleryItem" src="/7.PNG">
 
-            <img class="my-2 galleryItem" src="/gallery/8.PNG">
+            <img class="my-2 galleryItem" src="/8.PNG">
 
 
-            <img class="my-2 galleryItem" src="/gallery/16.JPG">
-            <img class="my-2 galleryItem" src="/gallery/17.JPG">
-            <img class="my-2 galleryItem" src="/gallery/18.JPG">
+            <img class="my-2 galleryItem" src="/16.JPG">
+            <img class="my-2 galleryItem" src="/17.JPG">
+            <img class="my-2 galleryItem" src="/18.JPG">
 
         </div>
     </div>
