--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -6,7 +6,7 @@
     background-position: bottom;
     background-size: cover;
     position: fixed;
-    top:0px;
+    top: 0px;
     z-index: -1;
 }
 
@@ -76,14 +76,14 @@
 
 /* gallery */
 
-.gallery{
+.gallery {
     /* overflow-x: scroll; */
     /* justify-content: space-between; */
     /* animation: scroll 15s linear infinite; */
     animation: scroll 15s linear infinite;
 }
 
-.gallery img{
+.gallery img {
     height: 180px;
     border-radius: 20px;
 }
@@ -106,14 +106,14 @@
 }
 
 /* Biography */
-.biography img{
+.biography img {
     height: 220px;
     /* width: 300px; */
 }
 
 
 /* video */
-.video{
+.video {
     height: 50vh;
     display: flex;
     justify-content: center;
@@ -121,24 +121,94 @@
     flex-direction: column;
 }
 
-.video img{
+.video img {
     filter: invert();
     height: 100px;
     cursor: pointer;
 }
 
-.videoPlay{
+.videoPlay {
     height: 100vh;
     width: 100%;
     z-index: 101;
     background-color: rgba(0, 0, 0, 0.603);
     position: fixed;
+    top: 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
+
+/* form */
+
+.form {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background-color: rgba(8, 8, 8, 0.763);
+    display: flex;
+    justify-content: center;
+}
+
+.form-in {
+    position: fixed;
+    top: 90px;
+    /* background-color: white; */
+    border-radius: 10px;
+    color: White;
+}
+
+/* FILLED POPUP */
+
+.filled {
+    display: flex;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.699);
+    z-index: 5;
+}
+
+.filled-in {
+    height: 250px;
+    width: 350px;
+    background-color: rgb(255, 255, 255);
+    position: fixed;
+    text-align: center;
+    top: 200px;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.filled-in img {
+    height: 100px;
+    width: 100px;
+}
+
+/* JOIN FORM */
+.joinUsForm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0px;
+    height: 100%;
+    width: 100%;
+    z-index: 3;
+    background-color: rgba(0, 0, 0, 0.769);
+}
+
+.myForm {
+    background-color: white;
+    border-radius: 40px;
+}
 
 
 @media screen and (max-width: 900px) {
@@ -182,9 +252,9 @@
 
 
     /* Biography */
-.biography img{
-    height: 130px;
-    /* width: 300px; */
-}
+    .biography img {
+        height: 130px;
+        /* width: 300px; */
+    }
 
 }
