--- a/src/app/components/services/services.component.css
+++ b/src/app/components/services/services.component.css
@@ -49,14 +49,84 @@
 }
 
 
+/* SERVICES */
+
+
+.service1 {
+    background: url('/ladiesSangeet.JPG');
+}
+
+.service2 {
+    background: url('/brideGroom.JPG')
+}
+
+.service3 {
+    background: url('/coupleDance.JPG');
+}
+
+.service4 {
+    background: url('/soloDance.AVIF');
+}
+
+.service5 {
+    background: url('/choreography.JPG');
+}
+
+.service6 {
+    background: url('/EventChoreography.jpeg');
+}
+
+.service7 {
+    background: url('/GroomEntry.JPG');
+}
+
+.service8 {
+    background: url('/BrideEntry.JPG');
+}
+
+.service9 {
+    background: url('/GroupDance.JPG');
+}
+
+.service10 {
+    background: url('/friendsDance.JPG');
+}
+
+.service11 {
+    background: url('/GrandVarmala.JPG');
+}
+
+.service12 {
+    background: url('/falshmob.JPG');
+}
+
+
+
+
+
 /* test */
 .servic {
     width: 300px;
     height: 30vh;
+    background-position: center;
+    background-size: cover;
     box-shadow: 5px 5px 4px black;
     display: flex;
     align-items: end;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: end;
 }
+
+ .servic button{
+    display: none;
+}
+
+/*
+
+.servic:hover button{
+    display: block;
+} */
 
 .servictext {
     background-color: #0000009c;
@@ -65,6 +135,20 @@
     font-size: 20px;
     font-weight: 600;
 }
+
+
+/* SERVICE DETAIL */
+
+.service-details{
+    background-color: rgba(0, 0, 0, 0.534);
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+    left: 0px;
+}
+
+
 
 
 
